  * slightly extended output of summary printer
  * added scan summary (summary.txt) when running over multiple files
  * added option to slha-printer (expandedOutput)
  * improved interactive plots 
  * small changes in the printers, L_max and L_SM added
  * the likelihood is now maximized only for positive values of the signal strength
    in the computation of lmax

Release v2.0.0, Mon 15 Mar 2021
=======================================================

  * Introduction of Particle class
  * Introduction of model class
  * Input model can now be defined by an SLHA file with QNUMBERS blocks  
  * Unified treatment of SLHA and LHE input files
  * Decomposition and experimental results can now handle lifetime dependent results
  * Added field "type" to the experimental results in the database
  * Added (optional) "intermediateState" to the experimental results in the database
  * Inclusive branches can now describe inclusive vertices  
  * Added possibility for analysis specific detector size  
  * New missing topologies algorithm and output  
  * Added "latest" and "latest_fastlim" database abbreviations
  * Added support for central database server  
  * Small bug fix in likelihood computation
  * Small fix due to an API change in pyhf 0.6
  * Changes in output: width values added, coverage groups and others (see manual for details)
  * Added option for signal strength multipliers in cross section calculator
  * Small bug fixes in models


Release v1.2.4, Thu 3 Sep 2020
=======================================================

  * added pyhf support
  * pickle path bug fix
  * bug fix for parallel xseccomputers
  * Introduced the SMODELS_CACHEDIR environment variable to allow for a different
    location of the cached database file
  * fixed dataId bug in datasets

Release v1.2.3, Mon 27 Apr 2020
=======================================================

  * database updated with results from more than 20 new analyses