@@ -3,7 +3,7 @@
 ## on a mac, for now please use the DYLD_LIBRARY_PATH variable  
 ## for pythia8.exe to find the shared object.
 
-PYTHIAVER := 8226
+PYTHIAVER := `cat pythiaversion`
 
 PYTHIA8HOME := pythia$(PYTHIAVER)/
 CXXFLAGS := -O3 -I$(PYTHIA8HOME)/include -I$(PYTHIA8HOME)/include/Pythia8/
