@@ -1,6 +1,7 @@
 #!/bin/sh
 
-VER='8226'
+VER=`cat pythiaversion`
+# https://pythia.org/download/pythia83/pythia8306.tgz
 [ -z "$1" ] && { echo "pythia8 version is not given, use pythia$VER"; } || 
 		{ VER="$1"; echo "set to version pythia$VER"; }
 
@@ -8,7 +9,8 @@ NCORES="4"
 command -v nproc && NCORES=`nproc`
 
 TARBALL="pythia$VER.tgz"
-URL=http://home.thep.lu.se/~torbjorn/pythia8/$TARBALL
+# URL=http://home.thep.lu.se/~torbjorn/pythia8/$TARBALL
+URL=http://pythia.org/download/pythia83/$TARBALL
 #TARBALL="pythia${VER}_fixed.tgz"
 
 test -e .$TARBALL && { echo "[installer] tarball $TARBALL exists"; } || { echo "[installer] getting $TARBALL"; wget $URL 2>/dev/null || curl -O $URL; mv $TARBALL .$TARBALL; };
