@@ -1,1 +1,1 @@
-pythia8226//share/Pythia8/xmldoc
+pythia8306//share/Pythia8/xmldoc
